icon rotation corrected when navbar collapses (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -139,3 +139,15 @@
     display: flex;
   }
 }
+
+.container {
+  &.isCollapsed {
+    .collapseMenuItem {
+      display: none;
+
+      img {
+        transform: rotate(180deg);
+      }
+    }
+  }
+}
